# wakatoken

./: .gitignore  LICENSE  README.md  cliff.toml  lefthook.yml  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_menu.rs  auto_update.rs  config.rs  credentials.rs  heartbeat.rs  lib.rs  local_stats.rs  main.rs  reporter.rs  scheduler.rs  tray.rs
src-tauri/src/collector/: claude.rs  codex.rs  copilot.rs  gemini.rs  mod.rs
src-tauri/tests/: smoke_test.rs
