[package]
name = "wakatoken-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "wakatoken_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["time"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
log = "0.4"

[dev-dependencies]
tempfile = "3"
